// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component renders correctly 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with capitalize 1`] = `
<styled.span
  capitalize={true}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with color 1`] = `
<styled.span
  capitalize={false}
  color="gold"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with italic 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={true}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with opacity 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={0.5}
  size="14px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with size 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="32px"
  uppercase={false}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with uppercase 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={true}
  weight={300}
>
  MyText
</styled.span>
`;

exports[`Text component renders correctly with weight 1`] = `
<styled.span
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={500}
>
  MyText
</styled.span>
`;
